@@ -5,3 +5,4 @@ java -cp bin Main
 
 tomorrow task is to finish-> if partial search give empty then search full disk ;
 java --module-path "C:\javafx-sdk-21\lib" --add-modules javafx.controls,javafx.fxml -cp bin Main
+javac --module-path "C:\javafx-sdk-21.0.11\lib" --add-modules javafx.controls -d bin App.java
